--- a/TrabPrac1/Calculator/Calculator.cbp
+++ b/TrabPrac1/Calculator/Calculator.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="FuncionesCalculadora.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="FuncionesCalculadora.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
